# documentation-qa-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: docker-image.yml
.vercel/: project.json
.windsurf/rules/: executing-python-files.md
api/: config.py  diffing.py  errors.py  index.py  linter.py  main.py  openrouter.py  parsing.py  prompt.py  regions.py  replacements.py  tgi.py
app/: __init__.py  config.py  linter.py  main.py  models.py  openrouter.py  parsing.py  replacements.py  tgi.py
docs/: api.md
old/: Dockerfile
scripts/: vercel-set-up-java.sh
