[project]
name = "documentation-qa-backend-api"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "proselint==0.14.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"
